# base_dumper

./: CHANGELOG.md  README.md  pip.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: build_wheels.yml  run_tests.yml
src/base_dumper/: __init__.py  dumper.py
src/base_dumper/common/: __init__.py  associate.py  diagram.py  dump_format.py  info.py  logger.py  multiquery.py  query_parts.py  reader.py  renders.py  stream.py  types.py
tests/: conftest.py  test_base_dumper.py  test_connector.py  test_constants.py  test_csv_stream_reader.py  test_db_meta_from_iter.py  test_query_kind.py  test_utils.py
